app-py/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app-py-deployment
spec:
    replicas: 2
    selector:
       matchLabels:
          app: app-py-app
    template:
       metadata:
          labels:
             app: app-py-app
       spec:
          containers:
          - name: app-py
            image: k314/app-py:v1
            ports:
              - name: web 
                containerPort: 80
            livenessProbe:
              httpGet:
                port: 80
                path: /
              initialDelaySeconds: 10
              periodSeconds: 5
              timeoutSeconds: 2
            readinessProbe:
              httpGet:
                port: 80
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 5
