app-py/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-py-service
spec:
  selector:
    app: app-py-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: NodePort
