app-py/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-py-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /otusapp/pikulakov($|/)(.*)
          backend:
            serviceName: app-py-service
            servicePort: 9000
